Fix x scroll bar on mobile view.

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,7 +64,7 @@ html, .transition-wrapper ,#root{
 }
 
 body {
-  min-width: 386px;
+  min-width: 370px;
   height: 100%;
   margin: 0;
   padding: 0;
